--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=80
-spring.datasource.url=jdbc:postgresql://localhost:5432/hr_app
+spring.datasource.url=jdbc:postgresql://localhost:5432/hr-app
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=123
+spring.jpa.hibernate.ddl-auto=create
 #//data sqlni ishlatish un
-spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=always
 spring.data.rest.base-path=/api
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
