--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=80
-spring.datasource.url=jdbc:postgresql://localhost:5432/hr-app
+spring.datasource.url=jdbc:postgresql://localhost:5432/hr_app
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=123
